--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,6 +4,7 @@
     font-display:block;
 }
 body {
+    cursor:default;
     display:flex;
     position:fixed;
     top:0;
@@ -66,7 +67,7 @@ body {
     top:1.3rem;
 }
 #things > span,
-#things2 > span {
+#colors > span {
     margin-left:1rem;
 }
 #things > span:hover {
@@ -74,12 +75,13 @@ body {
     font-weight:600;
     color:rgba(255,255,255,0.7);
 }
-#things2 {
+#colors {
     position:absolute;
     right:10%;
     top:3rem;
 }
 .color {
+    cursor:pointer;
     background:none;
     border:none;
 }
@@ -100,11 +102,10 @@ button:hover {
 }
 /* COLORS */
 .black {
-    fill:#808080;
+    fill:#555;
 }
 .white {
-    fill:#782;
-    opacity:0.7;
+    fill:#fff;
 }
 /* ROLL */
 #roll {
