--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,28 +27,6 @@ body {
     color:rgba(255,255,255,0.6);
     background:#222;
 }
-#open-icon {
-    position:fixed;
-    top:0;
-    right:0;
-    cursor:pointer;
-    filter:invert(1);
-    opacity:0.2;
-    transform-origin:center center;
-    transform:scale(0.5) rotate(45deg);
-    transition:all 0.5s ease-in-out;
-    z-index:3;
-}
-#open-icon:hover {
-    transform:scale(0.5) rotate(45deg);
-    opacity:0.7;
-}
-#open-icon.open {
-    transform:scale(0.5) rotate(0deg);
-}
-#things > span:hover {
-    text-decoration:underline;
-}
 
 /* BOARD */
 #board,
@@ -57,7 +35,7 @@ body {
     width:75vw;
     height:75vh;
     transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    border:1px solid rgba(255,255,255,0.2);
+    border:1px solid rgba(255,255,255,0.1);
 }
 #top,
 #game-top {
@@ -96,6 +74,10 @@ body {
     border-radius:50%;
     cursor:pointer;
     z-index:10;
+    transition:transform 0.2s ease-in-out;
+}
+.chip:hover {
+    transform:scale(1.2);
 }
 #game-top .chip,
 #game-bottom .chip {
@@ -106,12 +88,12 @@ body {
 #game-top .chip.black,
 #game-bottom .chip.black {
     background-color:#555;
-    box-shadow:none;
+    box-shadow:inset 0 0 10px #111;
 }
 #game-top .chip.white,
 #game-bottom .chip.white {
     background-color:#bbb;
-    box-shadow:none;
+    box-shadow:inset 0 0 10px #555;
 }
 .space {
     width:100%;
@@ -120,10 +102,12 @@ body {
     z-index:0;
 }
 #top .space {
+    opacity:0.5;
     clip-path:polygon(0 0, 50% 75%, 100% 0);
     transition:all 0.2s ease-in-out;
 }
 #bottom .space {
+    opacity:0.5;
     clip-path:polygon(0 100%, 50% 25%, 100% 100%);
     transition:all 0.2s ease-in-out;
 }
@@ -171,41 +155,62 @@ body {
 }
 
 /* TOOLS MENU */
-#tools {
+#open-icon {
+    position:fixed;
+    top:0;
+    right:0;
+    cursor:pointer;
+    filter:invert(1);
+    opacity:0.2;
+    transform-origin:center center;
+    transform:scale(0.5) rotate(45deg);
+    transition:all 0.5s ease-in-out;
+    z-index:3;
+}
+#open-icon:hover {
+    transform:scale(0.5) rotate(45deg);
+    opacity:0.7;
+}
+#open-icon.open {
+    transform:scale(0.5) rotate(0deg);
+    opacity:0.7;
+}
+#tools,
+#colors {
     position:fixed;
     top:-25vh;
-    right:0;
     width:100vw;
     height:25vh;
+    text-align:center;
     background:none;
     z-index:1;
-    opacity:0;
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-#tools.open {
-    top:0;
-    opacity:1;
-}
-#things {
-    position:absolute;
-    right:10%;
+#tools.open,
+#colors.open {
     top:1.3rem;
 }
-#things > span,
-#colors > span {
-    margin-left:1rem;
-}
-#things > span:hover {
+#tools > span:hover {
     cursor:pointer;
+    text-decoration:underline;
     font-weight:600;
     color:rgba(255,255,255,0.7);
+}
+#tools > span,
+#colors > span {
+    margin-left:1rem;
 }
 .color {
     cursor:pointer;
     background:none;
     border:none;
 }
-
+.color-icon {
+    width:1rem;
+    height:1rem;
+    filter:invert(1);
+    opacity:0.6;
+}
 /* BUTTONS */
 button {
     cursor:pointer;
@@ -300,7 +305,14 @@ button:hover {
     transform:translateZ(var(--hdice));
     border:none;
 }
-.black-dice span,
+.black-dice span {
+    position:absolute;
+    width:var(--dot);
+    height:var(--dot);
+    border-radius:50%;
+    background:#bbb;
+    z-index:6;
+}
 .white-dice span {
     position:absolute;
     width:var(--dot);
@@ -342,10 +354,10 @@ button:hover {
     justify-content:center;
     align-items:center;
     font-family:gothic;
-    font-size:1.2rem;
     position:absolute;
-    top:25%;
-    right:-8%;
+    top:15%;
+    right:-30px;
+    transform-origin:bottom right;
     transform:rotate(-90deg);
     opacity:0.5;
 }
@@ -354,20 +366,36 @@ button:hover {
     justify-content:center;
     align-items:center;
     font-family:gothic;
-    font-size:1.2rem;
     position:absolute;
-    bottom:25%;
-    right:-8%;
+    bottom:35%;
+    right:-30px;
+    transform-origin:bottom right;
     transform:rotate(-90deg);
     opacity:0.5;
+}
+meter::-webkit-meter-bar {
+    background:none;
+    background-color:rgba(255,255,255,0.2);
 }
 #whitebar,
 #blackbar {
     padding-left:5px;
-    transition:onchange 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    padding-right:5px;
+}
+#whitebar::-webkit-meter-optimum-value {
+    background:rgba(255,255,255,0.3);
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+#blackbar::-webkit-meter-optimum-value {
+    background:rgba(255,255,255,0.3);
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 #whitepip,
 #blackpip {
+    transform:rotate(90deg);
+}
+#white-chip-in,
+#black-chip-in {
     transform:rotate(90deg);
 }
 
