--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,6 +5,7 @@
 }
 * {
     box-sizing:border-box;
+    user-select:none;
 }
 :root {
     --dice:max(3vw,3vh);
@@ -32,10 +33,13 @@ body {
 #board,
 #gameboard {
     position:absolute;
+    display:flex;
+    align-items:center;
+    justify-content:center;
     width:75vw;
     height:75vh;
     transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    border:1px solid rgba(255,255,255,0.1);
+    /* border:1px solid rgba(255,255,255,0.1); */
 }
 #top,
 #game-top {
@@ -88,12 +92,12 @@ body {
 #game-top .chip.black,
 #game-bottom .chip.black {
     background-color:#555;
-    box-shadow:inset 0 0 10px #111;
+    box-shadow:inset 0 0 10px #222;
 }
 #game-top .chip.white,
 #game-bottom .chip.white {
     background-color:#bbb;
-    box-shadow:inset 0 0 10px #555;
+    box-shadow:inset 0 0 10px #222;
 }
 .space {
     width:100%;
@@ -133,6 +137,22 @@ body {
 #game-bottom span:nth-child(n+7) {
     transform:translateX(100%);
 }
+/* ADDITIONAL BOARD AREAS */
+#doubling {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    position:absolute;
+    width:calc(2 * var(--dice));
+    height:calc(2 * var(--dice));
+    background:#777;
+    font-family:gothic;
+    font-weight:900;
+    font-size:2rem;
+    color:#222;
+    box-shadow:inset 0 0 10px #222;
+    text-shadow:0px,0px,8px blue;
+}
 
 /* BOUNCE AREAS */
 #bounce-top {
@@ -143,6 +163,7 @@ body {
     height:50%;
     background:gray;
     transform:translateX(-50%);
+    box-shadow:inset 0 0 10px #222;
 }
 #bounce-bottom {
     position:absolute;
@@ -152,27 +173,25 @@ body {
     height:50%;
     background:lightgray;
     transform:translateX(-50%);
+    box-shadow:inset 0 0 10px #222;
 }
 
 /* TOOLS MENU */
-#open-icon {
+#settings {
     position:fixed;
     top:0;
     right:0;
     cursor:pointer;
     filter:invert(1);
     opacity:0.2;
-    transform-origin:center center;
-    transform:scale(0.5) rotate(45deg);
-    transition:all 0.5s ease-in-out;
+    transform:scale(0.5);
+    transition:all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     z-index:3;
 }
-#open-icon:hover {
-    transform:scale(0.5) rotate(45deg);
+#settings:hover {
     opacity:0.7;
 }
-#open-icon.open {
-    transform:scale(0.5) rotate(0deg);
+#settings.open {
     opacity:0.7;
 }
 #tools,
@@ -188,7 +207,7 @@ body {
 }
 #tools.open,
 #colors.open {
-    top:1.3rem;
+    top:1rem;
 }
 #tools > span:hover {
     cursor:pointer;
@@ -400,6 +419,6 @@ meter::-webkit-meter-bar {
 }
 
 @keyframes spinning {
-    0% {transform:rotateX(45deg) rotateY(45deg) rotateZ(45deg)}
-    100% {transform:rotateX(765deg) rotateY(405deg) rotateZ(405deg)}
+    0% {transform:rotateX(45deg) rotateY(45deg)}
+    100% {transform:rotateX(765deg) rotateY(405deg)}
 }
